# andijh92_gtdb

./: .gitignore  .gitlab-ci.yml  DebuggerForTorque.py  Makefile.am  README.md  README.org  README.txt  START_ON_WINDOWS.py  bootstrap  configure  configure.ac  env.in  readme.html  whatIsNew.txt
data/en_US/LC_MESSAGES/: torqueDebug.mo  torqueDebug.po
data/fr_FR/LC_MESSAGES/: torqueDebug.mo  torqueDebug.po
gtdb/: App.py  Config.py  Config.py.in  Connect.py  Console.py  Editor.py  Menu.py  Notebook.py  Parameters.py  SecWarningDlg.py  Splash.py  ToolBar.py  TorqueConnect.py  TorqueConsole.py  TorqueEditor.py  TorqueMenu.py  TorqueNotebook.py  TorqueParameters.py  TorqueSplash.py  TorqueToolBar.py  TorqueTree.py  TorqueUtil.py  Tree.py  Util.py  gtdb
lib/: TorqueConnectV1_02.py  TorqueConsoleV1_02.py  TorqueEditorV1_03.py  TorqueMenuV1_03.py  TorqueNotebookV1_02.py  TorqueParametersV02.py  TorqueSplashV01.py  TorqueToolBarV1_02.py  TorqueTreeV05.py  TorqueUtilV03_01.py
locale/en_US/LC_MESSAGES/: torqueDebug.mo  torqueDebug.po
locale/lexer/: key1.txt  style.txt
locale/report/: report-Script.html
tests/: test_load_parameters.py  test_start_connection.py
