python_PYTHON = \
	gtdb/TorqueConnectV1_02.py \
	gtdb/TorqueEditorV1_03.py \
	gtdb/TorqueNotebookV1_02.py \
	gtdb/TorqueSplashV01.py \
	gtdb/TorqueTreeV05.py \
	gtdb/TorqueConsoleV1_02.py \
	gtdb/TorqueMenuV1_03.py \
	gtdb/TorqueParametersV02.py \
	gtdb/TorqueToolBarV1_02.py \
	gtdb/TorqueUtilV03_01.py
